--- a/KutuphaneProject/Views/Ogrenci/KitapOgrenci.cshtml
+++ b/KutuphaneProject/Views/Ogrenci/KitapOgrenci.cshtml
@@ -21,6 +21,7 @@
 </style>
 
 @section Scripts {
+    <partial name="_ValidationScriptsPartial" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     @if (TempData["SuccessMessage"] != null)
@@ -34,6 +35,18 @@
                 customClass: {
                     confirmButton: 'swal-custom-success-button'
                 }
+            });
+        </script>
+    }
+
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <script type="text/javascript">
+            Swal.fire({
+                icon: 'error',
+                title: 'Hata!',
+                html: '@Html.Raw(TempData["ErrorMessage"])',
+                confirmButtonText: 'Tamam'
             });
         </script>
     }
